--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 joblib==1.4.2
+lightgbm==4.5.0
 numpy==1.26.4
 opencv-python-headless
 pillow==11.0.0
@@ -6,3 +7,4 @@ pandas==2.2.3
 streamlit==1.47.1
 scikit-learn==1.5.2
 tensorflow==2.17.0
+xgboost==2.1.1
